Updating to latest FlutterFlow output.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,8 +53,16 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
-
-
+	<key>NSCameraUsageDescription</key>
+    <string>In order to take a picture or video, this app requires permission to access the camera.</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>In order to record audio for video, this app requires permission to access the microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>In order to upload data, this app requires permission to access the photo library.</string>
+	<key>PermissionGroupNotification</key>
+    <string>PostMe needs access to send you post notifications</string>
+	<key>NSCalendarsUsageDescription</key>
+    <string>PostMe needs access to Calendar</string>
 
 
 	<key>UILaunchStoryboardName</key>
