--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
+  chewie: 1.4.0
   cloud_firestore: 4.8.0
   cloud_firestore_platform_interface: 5.15.0
   cloud_firestore_web: 3.6.0
@@ -62,7 +63,7 @@ dependencies:
   image_picker_ios: 0.8.6+1
   image_picker_platform_interface: 2.6.2
   intl: 0.18.0
-  json_path: 0.4.1
+  json_path: 0.6.2
   mime_type: 1.0.0
   page_transition: 2.0.4
   path_provider: 2.0.14
@@ -81,9 +82,10 @@ dependencies:
   sign_in_with_apple: 4.3.0
   sign_in_with_apple_platform_interface: 1.0.0
   sign_in_with_apple_web: 1.0.1
-  smooth_page_indicator: 1.0.1
+  simple_gradient_text: 1.2.3
   sqflite: 2.2.6
   stream_transform: 2.1.0
+  table_calendar: 3.0.9
   timeago: 3.2.2
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
