Updating to latest FlutterFlow output.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,11 +54,11 @@
 	<true/>
 
 	<key>NSCameraUsageDescription</key>
-    <string>In order to take a picture or video, this app requires permission to access the camera.</string>
+    <string>In order to record video, this app requires permission to access the camera</string>
 	<key>NSMicrophoneUsageDescription</key>
-    <string>In order to record audio for video, this app requires permission to access the microphone.</string>
+    <string>In order to record audio, this app requires permission to access the microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-    <string>In order to upload data, this app requires permission to access the photo library.</string>
+    <string>In order to upload files, this app requires permission to access the gallery</string>
 	<key>PermissionGroupNotification</key>
     <string>PostMe needs access to send you post notifications</string>
 	<key>NSCalendarsUsageDescription</key>
