--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,12 @@ post_install do |installer|
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
 
+        # dart: PermissionGroup.camera
+        'PERMISSION_CAMERA=1',
+
+        # dart: PermissionGroup.microphone
+        'PERMISSION_MICROPHONE=1',
+
         # dart: PermissionGroup.photos
         'PERMISSION_PHOTOS=1',
 
