--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: 4.8.0
   cloud_firestore_platform_interface: 5.15.0
   cloud_firestore_web: 3.6.0
+  cloud_functions: 4.3.2
+  cloud_functions_platform_interface: 5.4.2
+  cloud_functions_web: 4.5.2
   dropdown_button2: 2.0.0
   equatable: 2.0.5
   file_picker: 5.2.6
@@ -40,6 +43,9 @@ dependencies:
   firebase_core: 2.13.1
   firebase_core_platform_interface: 4.8.0
   firebase_core_web: 2.5.0
+  firebase_messaging: 14.6.2
+  firebase_messaging_platform_interface: 4.5.2
+  firebase_messaging_web: 3.5.2
   firebase_performance: 0.9.2+2
   firebase_performance_platform_interface: 0.1.4+2
   firebase_performance_web: 0.1.4+2
